# rts_project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  conanfile.py  run_client.bat  run_server.bat  run_tests.bat  setup.bat
.github/workflows/: ci.yml
client/: CMakeLists.txt
client/include/: README.md
client/src/: main.cpp
cmake/: CompilerWarnings.cmake  Sanitizers.cmake  StaticAnalysis.cmake
common/: CMakeLists.txt
common/fbs/: rts_protocol.fbs  rts_protocol_generated.hpp
common/include/: README.md
common/include/game/: Components.hpp  MapConfig.hpp
common/include/network/: ENetWrapper.hpp  Serializer.hpp
common/src/: placeholder.cpp
common/src/network/: Serializer.cpp
docker/: Dockerfile.server
server/: CMakeLists.txt
server/include/: README.md
server/include/Simulation/: MapGenerator.hpp  SimulationLoop.hpp
server/src/: main.cpp
tests/: CMakeLists.txt
tests/client/: CMakeLists.txt  test_placeholder.cpp
tests/common/: CMakeLists.txt  test_placeholder.cpp  test_serializer.cpp
tests/server/: CMakeLists.txt  test_placeholder.cpp
